OctopusServerOnEKS/Octopus-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octopus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: octopus
  template:
    metadata:
      labels:
        app: octopus
    spec:
      #initContainers:
      #  - name: sqlcheck-container
      #    image: appropriate/curl
      #    command: ['sh', '-c', 'until nc -z mssql 1433; do echo waiting for mssql; sleep 2; done;']
      containers:
        - name: octopus
          image: octopusdeploy/octopusdeploy:2023.4
          ports:
          - containerPort: 8080
          volumeMounts:
            - name: octopus-storage
              mountPath: /repository
            - name: octopus-storage
              mountPath: /artifacts
            - name: octopus-storage
              mountPath: /taskLogs
            - name: octopus-storage
              mountPath: /cache
            - name: octopus-storage
              mountPath: /import
      volumes:
        - name: octopus-storage
          persistentVolumeClaim:
            claimName: octopus-pvc
